--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -13,6 +13,7 @@
   "rules": {
     "semi": [0],
     "import/no-extraneous-dependencies":[0],
-    "react/jsx-filename-extension":[0]
+    "react/jsx-filename-extension":[0],
+    "react/require-default-props": [0]
   }
 }
