--- a/package.json
+++ b/package.json
@@ -23,17 +23,24 @@
     "koa-router": "^7.4.0",
     "koa-server-http-proxy": "^0.1.0",
     "koa-static": "^5.0.0",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "webpack": "^4.29.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "7.x",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "cross-env": "^5.2.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb": "^17.1.0",
