--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:server": "webpack --config build/webpack.config.server.js",
     "clear": "rimraf dist",
     "build": "npm run clear && npm run build:client && npm run build:server",
-    "start": "node server/server.js",
+    "start": "cross-env NODE_ENV=production node server/server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
     "dev:server": "cross-env NODE_ENV=development node server/server.js",
     "comments": "cross env 是在不同系统下对nodejs环境变量设置的一种兼容性方式",
@@ -19,15 +19,22 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "ejs-compiled-loader-webpack4": "^2.2.0",
     "koa": "^2.6.2",
+    "koa-json": "^2.0.2",
+    "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
     "koa-server-http-proxy": "^0.1.0",
+    "koa-session": "^5.10.1",
     "koa-static": "^5.0.0",
+    "koa-views": "^6.1.5",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-async-bootstrapper": "^2.1.1",
     "react-dom": "^16.7.0",
+    "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "webpack": "^4.29.0"
