--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -15,6 +15,8 @@
     "import/no-extraneous-dependencies":[0],
     "react/jsx-filename-extension":[0],
     "react/require-default-props": [0],
-    "react/destructuring-assignment": [0]
+    "react/destructuring-assignment": [0],
+    "react/forbid-prop-types": [0],
+    "no-continue": [0]
   }
 }
