--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "ejs-compiled-loader-webpack4": "^2.2.0",
+    "jss": "^10.0.0-alpha.12",
+    "jss-preset-default": "^10.0.0-alpha.7",
     "koa": "^2.6.2",
     "koa-json": "^2.0.2",
     "koa-mount": "^4.0.0",
@@ -28,13 +33,17 @@
     "koa-session": "^5.10.1",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.5",
+    "koa2-cors": "^2.0.6",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "prop-types": "^15.6.2",
+    "query-string": "^6.3.0",
     "react": "^16.7.0",
     "react-async-bootstrapper": "^2.1.1",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
+    "react-jss": "^8.6.1",
+    "react-markdown": "^4.0.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "webpack": "^4.29.0"
@@ -44,9 +53,11 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "7.x",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "cross-env": "^5.2.0",
     "eslint": "^5.12.1",
@@ -59,6 +70,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
     "memory-fs": "^0.4.1",
