--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:client": "webpack --config build/webpack.config.client.js",
-    "build:server": "webpack --config build/webpack.config.server.js",
+    "build:client": "webpack --env.NODE_ENV=production --config build/webpack.config.client.js",
+    "build:server": "webpack --env.NODE_ENV=production --config build/webpack.config.server.js",
     "clear": "rimraf dist",
     "build": "npm run clear && npm run build:client && npm run build:server",
     "start": "cross-env NODE_ENV=production node server/server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
     "dev:server": "cross-env NODE_ENV=development node server/server.js",
-    "comments": "cross env 是在不同系统下对nodejs环境变量设置的一种兼容性方式",
+    "comments": "echo cross env 是在不同系统下对nodejs环境变量设置的一种兼容性方式",
     "lint": "eslint --ext .js --ext .jsx client/",
     "precommit": "npm run lint"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "3.9.2",
+    "@material-ui/icons": "3.0.2",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "ejs-compiled-loader-webpack4": "^2.2.0",
